--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,8 +36,8 @@ jobs:
         if: env.no_changes == 'false'
         run: |
           TAG=${GITHUB_SHA::7}
-          docker build -t mompansy/home-ordering:$TAG -f docker/app.dockerfile .
-          docker tag mompansy/home-ordering:$TAG mompansy/home-ordering-node:latest
+          docker build -t mompansy/home-ordering-node:$TAG -f docker/app.dockerfile .
+          docker tag mompansy/home-ordering-node:$TAG mompansy/home-ordering-node:latest
           docker push mompansy/home-ordering-node:$TAG
           docker push mompansy/home-ordering-node:latest
 
