--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "pnpm run build:typecheck && rm -rf dist && pnpm run build:server && pnpm run build:app",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build:docker": " docker build --no-cache -t home-ordering -f docker/app.dockerfile ."
   },
   "dependencies": {
     "react": "^18.3.1",
