--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@9.0.3",
   "scripts": {
     "dev:server": "pnpm tsx watch --tsconfig tsconfig.node.json server/index.ts",
     "dev:app": "wait-on http://0.0.0.0:3000/healthz && vite",
