added shadcn, started on simple sidebar

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,8 @@
     "moduleResolution": "Bundler",
     "noEmit": true,
     "paths": {
-      "server/*": ["../server/*"]
+      "server/*": ["../server/*"],
+      "@/*": ["./*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
