--- a/package.json
+++ b/package.json
@@ -5,53 +5,61 @@
   "type": "module",
   "packageManager": "pnpm@9.1.1",
   "scripts": {
-    "dev:server": "pnpm tsx watch --tsconfig tsconfig.node.json server/index.ts",
+    "dev:server": "pnpm dotenvx run -- tsx watch --tsconfig tsconfig.node.json server/index.ts",
     "dev:app": "wait-on http://0.0.0.0:3000/healthz && vite",
-    "dev": "pnpm run --stream /dev:.*/",
+    "dev": "pnpm dotenvx run -- pnpm run --stream /dev:.*/",
     "build:typecheck": "tsc --noEmit -p tsconfig.app.json && tsc --noEmit -p tsconfig.node.json",
     "build:server": "tsx --tsconfig tsconfig.node.json scripts/build-server.ts",
     "build:app": "vite build",
     "build": "pnpm run build:typecheck && rm -rf dist && pnpm run build:server && pnpm run build:app",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node dist/index.js",
+    "start": "pnpm dotenvx run -- node dist/index.js",
+    "typegen": "pnpm supabase gen types typescript --project-id mjqigblexugzxswytqat -s public,storage> src/database.gen.ts",
     "build:docker": " docker build --no-cache -t home-ordering -f docker/app.dockerfile ."
   },
   "dependencies": {
-    "@hono/node-server": "^1.13.0",
+    "@dotenvx/dotenvx": "^1.33.0",
+    "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.47.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hono": "^4.6.2",
+    "hono": "^4.6.15",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tanstack/react-query": "^5.62.15",
+    "@tanstack/react-query-devtools": "^5.62.15",
     "@types/node": "^22.10.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
     "esbuild": "^0.23.1",
     "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.1",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
+    "tsx": "^4.19.2",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.19.0",
+    "vite": "^6.0.6",
     "wait-on": "^8.0.1"
   }
 }
