env name change

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "type": "module",
   "packageManager": "pnpm@9.1.1",
   "scripts": {
-    "dev:server": "pnpm dotenvx run -- tsx watch --tsconfig tsconfig.node.json server/index.ts",
+    "dev:server": "pnpm dotenvx run --env-file=.env.production -- tsx watch --tsconfig tsconfig.node.json server/index.ts",
     "dev:app": "wait-on http://0.0.0.0:3000/healthz && vite",
-    "dev": "pnpm dotenvx run -- pnpm run --stream /dev:.*/",
+    "dev": "pnpm dotenvx run --env-file=.env.production -- pnpm run --stream /dev:.*/",
     "build:typecheck": "tsc --noEmit -p tsconfig.app.json && tsc --noEmit -p tsconfig.node.json",
     "build:server": "tsx --tsconfig tsconfig.node.json scripts/build-server.ts",
     "build:app": "vite build",
     "build": "pnpm run build:typecheck && rm -rf dist && pnpm run build:server && pnpm run build:app",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "pnpm dotenvx run -f .env -- node dist/index.js",
+    "start": "pnpm dotenvx run --env-file=.env.production -- node dist/index.js",
     "typegen": "pnpm supabase gen types typescript --project-id mjqigblexugzxswytqat -s public,storage> src/database.gen.ts",
     "build:docker": " docker build --no-cache -t home-ordering ."
   },
